[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scenes/message_view/message_view.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/translation_view/translation_view_state.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/translation_view/translation_view.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/locale_view/locale_view.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/translation_separator/translation_separator.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/translation_manager.gd" type="Script" id=6]
[ext_resource path="res://src/scenes/inspector_view/analyzer_view.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/main_window/main_window.gd" type="Script" id=8]
[ext_resource path="res://src/scenes/main_window/main_window_state.gd" type="Script" id=9]

[node name="MainWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="MainWindowState" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="MessageSplit" type="HSplitContainer" parent="MarginContainer"]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 8.0
margin_right = 1112.0
margin_bottom = 712.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MessageView" parent="MarginContainer/MessageSplit" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 272.0
margin_bottom = 704.0

[node name="LocaleSplit" type="HSplitContainer" parent="MarginContainer/MessageSplit"]
unique_name_in_owner = true
margin_left = 280.0
margin_right = 1104.0
margin_bottom = 704.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/MessageSplit/LocaleSplit"]
margin_right = 614.0
margin_bottom = 704.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="TranslationRows" type="VBoxContainer" parent="MarginContainer/MessageSplit/LocaleSplit/VSplitContainer"]
margin_right = 614.0
margin_bottom = 557.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
custom_constants/separation = 8

[node name="TranslationViewA" parent="MarginContainer/MessageSplit/LocaleSplit/VSplitContainer/TranslationRows" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 614.0
margin_bottom = 258.0
state_path = NodePath("TranslationViewStateA")
manager_path = NodePath("TranslationManagerA")
label = "A"
label_color = Color( 0.647059, 0.717647, 0.952941, 1 )

[node name="TranslationViewStateA" type="Node" parent="MarginContainer/MessageSplit/LocaleSplit/VSplitContainer/TranslationRows/TranslationViewA"]
script = ExtResource( 2 )

[node name="TranslationManagerA" type="Node" parent="MarginContainer/MessageSplit/LocaleSplit/VSplitContainer/TranslationRows/TranslationViewA"]
script = ExtResource( 6 )

[node name="TranslationSeparator" parent="MarginContainer/MessageSplit/LocaleSplit/VSplitContainer/TranslationRows" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 266.0
margin_right = 614.0
margin_bottom = 291.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
state_a_path = NodePath("../TranslationViewA/TranslationViewStateA")
state_b_path = NodePath("../TranslationViewB/TranslationViewStateB")

[node name="TranslationViewB" parent="MarginContainer/MessageSplit/LocaleSplit/VSplitContainer/TranslationRows" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 299.0
margin_right = 614.0
margin_bottom = 557.0
state_path = NodePath("TranslationViewStateB")
manager_path = NodePath("TranslationManagerB")
label = "B"
label_color = Color( 0.988235, 0.611765, 0.611765, 1 )
collapse_empty = true

[node name="TranslationViewStateB" type="Node" parent="MarginContainer/MessageSplit/LocaleSplit/VSplitContainer/TranslationRows/TranslationViewB"]
script = ExtResource( 2 )

[node name="TranslationManagerB" type="Node" parent="MarginContainer/MessageSplit/LocaleSplit/VSplitContainer/TranslationRows/TranslationViewB"]
script = ExtResource( 6 )

[node name="AnalyzerView" parent="MarginContainer/MessageSplit/LocaleSplit/VSplitContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 569.0
margin_right = 614.0
margin_bottom = 704.0
size_flags_horizontal = 3
size_flags_vertical = 3
message_view_path = NodePath("../../../MessageView")
manager_a_path = NodePath("../TranslationRows/TranslationViewA/TranslationManagerA")
manager_b_path = NodePath("../TranslationRows/TranslationViewB/TranslationManagerB")

[node name="LocaleView" parent="MarginContainer/MessageSplit/LocaleSplit" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 622.0
margin_right = 824.0
margin_bottom = 704.0
size_flags_horizontal = 3
size_flags_vertical = 3
manager_a_path = NodePath("../VSplitContainer/TranslationRows/TranslationViewA/TranslationManagerA")
manager_b_path = NodePath("../VSplitContainer/TranslationRows/TranslationViewB/TranslationManagerB")
